Refactor navigation link scss

--- a/src/components/Navigation/Navigation.scss
+++ b/src/components/Navigation/Navigation.scss
@@ -1,6 +1,9 @@
 @import 'styles/colors.scss';
 
 .navigation {
+    &__item {
+        margin: 0 8px;
+    }
     &__link {
         color: $color-white;
 
